--- a/StronkaBITEHack/src/styles/organizersStyles/organizers.css
+++ b/StronkaBITEHack/src/styles/organizersStyles/organizers.css
@@ -1,3 +1,16 @@
+.o-container {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    width: 100vw;
+    height: 100vh;
+    scroll-snap-align: start;
+}
+
 .organizers-container {
     margin-top: 25vh;
     display: flex;
